-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.12.4, Qt Creator 4.13.2, Qt Creator 4.14.0-beta1
-
None
-
-
c5544c30f29bf43b86913df92b332c56d903ebe7 (qt-creator/qt-creator/master)
| For Gerrit Dashboard: QTCREATORBUG-24891 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 320093,5 | WebAssembly: Fix Qt 5.15 for WebAssemby ABI detection | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |