WebAssembly: Fix Qt 5.15 for WebAssemby ABI detection

The Qt 5.15 for WebAssembly binaries published via the Qt SDK installer
have a different binary format. Like in previous versions, the static
libraries are in the "ar" format. However, the packaged .obj files, from
Qt 5.15 on, have the '∖0asm' magic number.

Fixes: QTCREATORBUG-24891
Change-Id: Idc6004dfc0949280a1d5f257c462d094fa51f5a6
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>